Refactor local AI asset paths and prompt handling